@@ -1,3 +1,8 @@
+2008-04-18  Fernando Perez  <Fernando.Perez@berkeley.edu>
+
+	* IPython/genutils.py (page): apply workaround to curses bug that
+	can leave terminal corrupted after a call to initscr().
+
 2008-04-15  Ville Vainio <vivainio@gmail.com>
 
 	* genutils.py: SList.grep supports 'field' argument
